--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ hyper = { version = "0.14", features = ["full"] }
 reqwest = { version = "0.11", features = ["stream"] }
 tokio = { version = "1", features = ["full"] }
 futures-util = "0.3"
+bytes = "1.7.2"
