--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ reqwest = { version = "0.11", features = ["stream"] }
 tokio = { version = "1", features = ["full"] }
 futures-util = "0.3"
 bytes = "1.7.2"
+
+[target.'cfg(windows)'.build-dependencies]
+winresource = "0.1.17"
