--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ tokio = { version = "1", features = ["full"] }
 futures-util = "0.3"
 bytes = "1.7.2"
 clap = { version = "4.5.20", features = ["derive"] }
+ordermap = "0.5.3"
 
 [target.'cfg(windows)'.build-dependencies]
 winresource = "0.1.17"
