--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ clap = { version = "4.5.20", features = ["derive"] }
 ordermap = "0.5.3"
 serde = "1.0.218"
 serde_json = "1.0.139"
+rand = "0.9.0"
+chrono = "0.4.40"
 
 [target.'cfg(windows)'.build-dependencies]
 winresource = "0.1.17"
