--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ serde = "1.0.218"
 serde_json = "1.0.139"
 rand = "0.9.0"
 chrono = "0.4.40"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["time"] }
+time = { version = "0.3.41", features = ["formatting", "local-offset", "macros"] }
 
 [target.'cfg(windows)'.build-dependencies]
 winresource = "0.1.17"
