--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Pre-release on Push
 
 on:
   push:
@@ -30,3 +30,11 @@ jobs:
 
     - name: Run tests
       run: cargo test --verbose
+    
+    - name: list files
+      run: ls -la ./target/release
+    - name: Pre-Release
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: ./target/release/ollama_load_balancer
