fix workflow for windows

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -39,20 +39,22 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
     
-    - name: rename executable
+    - name: rename executable (Linux)
+      if: matrix.os == 'ubuntu-latest'
       run: |
-        if [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
-          mv -v ./target/release/ollama_load_balancer ./ollama_load_balancer_linux
-          echo "exec_path=./ollama_load_balancer_linux" >> $GITHUB_ENV
-        fi
-        if [ "${{ matrix.os }}" == "macos-latest" ]; then
-          mv -v ./target/release/ollama_load_balancer ./ollama_load_balancer_macos
-          echo "exec_path=./ollama_load_balancer_macos" >> $GITHUB_ENV
-        fi
-        if [ "${{ matrix.os }}" == "windows-latest" ]; then
-          mv -v ./target/release/ollama_load_balancer.exe ./ollama_load_balancer_windows.exe
-          echo "exec_path=./ollama_load_balancer_windows.exe" >> $GITHUB_ENV
-        fi
+        mv -v ./target/release/ollama_load_balancer ./ollama_load_balancer_linux
+        echo "exec_path=./ollama_load_balancer_linux" >> $GITHUB_ENV
+    - name: rename executable (MacOS)
+      if: matrix.os == 'macos-latest'
+      run: |
+        mv -v ./target/release/ollama_load_balancer ./ollama_load_balancer_macos
+        echo "exec_path=./ollama_load_balancer_macos" >> $GITHUB_ENV
+    - name: rename executable (Windows)
+      if: matrix.os == 'windows-latest'
+      run: |
+        mv -v ./target/release/ollama_load_balancer.exe ./ollama_load_balancer_windows.exe
+        echo "exec_path=./ollama_load_balancer_windows.exe" >> $GITHUB_ENV
+
     - name: Pre-Release
       uses: softprops/action-gh-release@v2
       with:
