fix: pre-release exec_path

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -58,6 +58,6 @@ jobs:
     - name: Pre-Release
       uses: softprops/action-gh-release@v2
       with:
-        files: $GITHUB_ENV.exec_path
+        files: ${{ env.exec_path }}
         tag_name: Pre-release
         prerelease: true
