--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -53,7 +53,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: |
         mv -v ./target/release/ollama_load_balancer.exe ./ollama_load_balancer_windows.exe
-        echo "exec_path=./ollama_load_balancer_windows.exe" >> $GITHUB_ENV
+        "exec_path=./ollama_load_balancer_windows.exe" | Out-File -FilePath $env:GITHUB_ENV -Append
 
     - name: Pre-Release
       uses: softprops/action-gh-release@v2
