--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest, ubuntu-24.04-arm]
 
     runs-on: ${{ matrix.os }}
 
@@ -39,11 +39,16 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
     
-    - name: rename executable (Linux)
+    - name: rename executable (Linux x64)
       if: matrix.os == 'ubuntu-latest'
       run: |
-        mv -v ./target/release/ollama_load_balancer ./ollama_load_balancer_linux
-        echo "exec_path=./ollama_load_balancer_linux" >> $GITHUB_ENV
+        mv -v ./target/release/ollama_load_balancer ./ollama_load_balancer_linux_x86_64
+        echo "exec_path=./ollama_load_balancer_linux_x86_64" >> $GITHUB_ENV
+    - name: rename executable (Linux aarch64)
+      if: matrix.os == 'ubuntu-24.04-arm'
+      run: |
+        mv -v ./target/release/ollama_load_balancer ./ollama_load_balancer_linux_aarch64
+        echo "exec_path=./ollama_load_balancer_linux_aarch64" >> $GITHUB_ENV
     - name: rename executable (MacOS)
       if: matrix.os == 'macos-latest'
       run: |
